fix: fix problems with white space line beetween footer and 'in addition' section; feat: add data to self-check of shelter-part2 to the project

--- a/shelter/Main/style.css
+++ b/shelter/Main/style.css
@@ -1474,7 +1474,7 @@ img {
   justify-content: center;
   align-items: center;
   padding-top: 80px;
-  padding-bottom: 100px;
+  padding-bottom: 101px;
   column-gap: 30px;
 }
 .in-addition__container > :first-child {
